# sgw_orth

./: .gitattributes  .gitignore  AUTHORS  LICENSE  Makefile.am  README  README_ortho.md  apertium-sgw.pc.in  apertium-sgw.post-sgw.dix  apertium-sgw.post2013-pre2013.lexc  apertium-sgw.post2013-pre2013.twol  apertium-sgw.sgw.lexd  apertium-sgw.sgw.rlx  apertium-sgw.sgw.spellrelax  apertium-sgw.sgw.twol  apertium-sgw.sgw.udx  autogen.sh  commonwords-morph-input.txt  configure.ac  configure~  converstedpost.txt  corpus.out.txt  editdist.py  modes.xml  newpre2013.txt  output2.txt  post2013.txt  postgen2013.txt  pre2013.txt  sgw.corpus.basic.txt  xyz.yaml
